--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -1,6 +1,6 @@
 .portfolio-section {
   background: linear-gradient(135deg, rgba(0, 166, 147, 0.05), rgba(13, 202, 240, 0.1), rgba(14, 165, 233, 0.05));
-  padding-top: 1rem ;
+  padding-top: 1rem;
   position: relative;
   overflow: hidden;
   min-height: 100vh;
@@ -18,7 +18,8 @@
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(3, 200px);
   gap: 1.5rem;
-  max-width: 1200px;
+  /* max-width: 1200px; */
+  padding: 0 7%;
   margin: 0 auto;
 }
 
