--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -8,9 +8,9 @@
 
 
 .contact-container {
-  max-width: 1200px;
+  /* max-width: 1200px; */
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 0 5%;
 }
 
 .contact-header {
