--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -2,11 +2,14 @@
   position: sticky;
   top: 0;
   left: 0;
+  right: 0;
   width: 100%;
   padding: 1rem 0;
   transition: all 0.3s ease;
   z-index: 9999;
   background: transparent;
+  /* border: 2px solid; */
+  overflow-x: hidden;
 }
 
 .navbar.scrolled {
@@ -29,6 +32,7 @@
   align-items: center;
   gap: 9px;
   text-decoration: none;
+  /* border:1px solid; */
 }
 
 .logo-img {
@@ -42,10 +46,14 @@
 }
 
 @keyframes blink {
-  0%, 50% {
+
+  0%,
+  50% {
     opacity: 1;
   }
-  51%, 100% {
+
+  51%,
+  100% {
     opacity: 0;
   }
 }
@@ -120,8 +128,8 @@
 .mobile-menu-dropdown {
   position: fixed;
   top: 0;
-  right: -100%;
-  width: 300px;
+  right: -100vw;
+  width: min(280px, 80vw);
   height: 100vh;
   background: rgba(255, 255, 255, 0.98);
   backdrop-filter: blur(15px);
@@ -131,10 +139,13 @@
   padding: 2rem 0;
   transition: right 0.3s ease;
   z-index: 10000;
+  box-sizing: border-box;
+  visibility: hidden;
 }
 
 .mobile-menu-dropdown.active {
   right: 0;
+  visibility: visible;
 }
 
 .mobile-menu-header {
@@ -191,12 +202,21 @@
 
 @media (min-width: 901px) {
   .mobile-menu-dropdown {
-    display: none;
+    display: none !important;
   }
 }
 
 @media(max-width: 490px) {
   .logo-text {
-    font-size: 1.6rem;
+    font-size: 1.31rem;
   }
+
+  .nav-logo {
+    gap: 11px;
+  }
+
+  .logo-img {
+    width: 45px;
+  }
+
 }
